Update engine, still contains some commented out debug statements, fixed some bugs, improved search algorithm with true make/undomoves

--- a/ChessC#/ChessC#.csproj
+++ b/ChessC#/ChessC#.csproj
@@ -8,6 +8,7 @@
 		<AssemblyName>ChessC#</AssemblyName>
 		<RootNamespace>ChessC_</RootNamespace>
 		<OutputType>Exe</OutputType>
+		<PlatformTarget>AnyCPU</PlatformTarget>
 	</PropertyGroup>
 
 	<!-- Optional: include App.config if still needed -->
